--- a/babYoda/static/css/styles.css
+++ b/babYoda/static/css/styles.css
@@ -78,7 +78,47 @@ main {
     width:400px;
     margin-left: auto;
     margin-right: auto;
-  }
+}
+
+.conteiner{
+    display: flex;
+}
+
+.box {
+    padding: 5px;
+    border: 1px solid green;
+    width: 300px;
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.box__imagem {
+    background: grey;
+    width: 250px;
+    height: 325px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.box__informacao{
+    margin: 0 10px;
+    display: flex;
+    padding-top: 10px;
+    justify-content: space-between;
+
+}
+
+.box__informacao--icone {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+.box__titulo {
+    font-size: 16px;    
+    display: flex;
+    flex-direction: column;
+}
 
 
 footer {
