--- a/babYoda/templates/babYoda/layout.html
+++ b/babYoda/templates/babYoda/layout.html
@@ -29,7 +29,7 @@
     </main>
 
     <footer id='footer'>
-  
+      <div>Icons made by <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </footer>
   </body>
 </html>
