--- a/babYoda/templates/babYoda/lista.html
+++ b/babYoda/templates/babYoda/lista.html
@@ -1,5 +1,72 @@
 {% extends "babYoda/layout.html" %}
 
+{% load static %}
+
 {% block content%}
+
     <h1>Lista</h1>
+
+    <div class="conteiner">
+
+        <div class="box">
+            <div class="box__imagem">
+                <img src="" alt="fralda" class="box__imagem--foto">
+            </div>
+            <div class="box__informacao">
+                <div class="box__informacao--icone">
+                    <img src="{% static 'media/remover.svg' %}" alt="remover" class="box__imagem--remover">
+                </div>
+                <div class="box__titulo">
+                    <span class="box__imagem--texto">Fralda P</span>
+                    <span class="box__imagem--texto">R$ 21,00</span>
+                </div>
+                <div class="box__informacao--icone">
+                    <img src="{% static 'media/adicionar.svg' %}" alt="adicionar" class="box__imagem--adicionar">
+                </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="box__imagem">
+                <img src="" alt="fralda" class="box__imagem--foto">
+            </div>
+            <div class="box__informacao">
+                <div class="box__informacao--icone">
+                    <img src="{% static 'media/remover.svg' %}" alt="remover" class="box__imagem--remover">
+                </div>
+                <div class="box__titulo">
+                    <span class="box__imagem--texto">Fralda P</span>
+                    <span class="box__imagem--texto">R$ 21,00</span>
+                </div>
+                <div class="box__informacao--icone">
+                    <img src="{% static 'media/adicionar.svg' %}" alt="adicionar" class="box__imagem--adicionar">
+                </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="box__imagem">
+                <img src="" alt="fralda" class="box__imagem--foto">
+            </div>
+            <div class="box__informacao">
+                <div class="box__informacao--icone">
+                    <img src="{% static 'media/remover.svg' %}" alt="remover" class="box__imagem--remover">
+                </div>
+                <div class="box__titulo">
+                    <span class="box__imagem--texto">Fralda P</span>
+                    <span class="box__imagem--texto">R$ 21,00</span>
+                </div>
+                <div class="box__informacao--icone">
+                    <img src="{% static 'media/adicionar.svg' %}" alt="adicionar" class="box__imagem--adicionar">
+                </div>
+            </div>
+        </div>
+
+        
+
+    </div>
+    
+
 {% endblock %}
+
+
