finalizado a interface da lista do cha, implementado o BD e feito suas configurações

--- a/babYoda/templates/babYoda/evento.html
+++ b/babYoda/templates/babYoda/evento.html
@@ -10,7 +10,10 @@
     <div class="evento__local"> <span class="negrito">Endereço:</span> QNM 36 Conjunto A2 Casa 07 </div>
     <div class="evento__local"> M-Norte - Atrás do JK Shopping </div>
 
-    <div id="mapa" class="evento__mapa"></div>
+    <a href="https://www.google.com/maps/place/St.+M-Norte+-+Taguatinga,+Federal+District,+Brasilia+-+Federal+District,+72145-631/@-15.8076235,-48.0968769,19.08z/data=!4m5!3m4!1s0x935bccbe870c258d:0x280310997b953100!8m2!3d-15.8074831!4d-48.0972555" target="_blank">
+        <div id="mapa" class="evento__mapa">
+        </div>
+    </a>
     
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIQk4jxHzUYCiboR2VEqpXk2G1PFNTMPo&callback=inicializar">
     </script>
