--- a/babYoda/static/css/styles.css
+++ b/babYoda/static/css/styles.css
@@ -82,23 +82,32 @@ main {
 
 .conteiner{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .box {
-    padding: 5px;
-    border: 1px solid green;
+    margin:20px;
+    padding: 10px;
     width: 300px;
-    height: 400px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+}
+
+.box__imagem {
+    max-width: 250px;
+    max-height: 300px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.box__imagem {
-    background: grey;
-    width: 250px;
-    height: 325px;
-    margin-left: auto;
-    margin-right: auto;
+.box__imagem--foto {
+    max-width: 250px;
+    max-height: 325px;
+    width: auto;
+    height: auto;
 }
 
 .box__informacao{
@@ -106,6 +115,7 @@ main {
     display: flex;
     padding-top: 10px;
     justify-content: space-between;
+    margin-bottom: 10px;
 
 }
 
@@ -114,6 +124,7 @@ main {
     height: 40px;
     cursor: pointer;
 }
+
 .box__titulo {
     font-size: 16px;    
     display: flex;
