--- a/babYoda/templates/babYoda/lista.html
+++ b/babYoda/templates/babYoda/lista.html
@@ -30,16 +30,13 @@
     </div>
 
     <div id="lista_final"></div>
-        <form method='post'>
+        <form action="{% url 'babYoda:carrinho' %}" method='post'>
             {% csrf_token %}
-            <input type="text" name="lista" value="">
-            <input type="submit" >
+            <input type="text" name="lista" value="" class="valor_lista" hidden>
+            <input type="submit">
             
         </form>
-    </div>    
-    <div id="carrinho" hidden>
-        <a href="{% url 'babYoda:carrinho' %}"><img src="{% static 'media/carrinho.svg' %}" alt="carrinho" class="carrinho__icone"></a>
-    </div>
+    </div>   
 
     <script src="{% static 'js/carrinho.js' %}"></script>
     
